<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/foto"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="233dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/singapore_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/singapore" />

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Foto" />

        <Button
            android:id="@+id/fondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/upload" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="34dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/camera_value"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:text="Nombre"
            app:layout_constraintBaseline_toBaselineOf="@+id/nombre"
            app:layout_constraintEnd_toStartOf="@+id/descripcion_corta"
            tools:text="@string/camera" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:text="Descripcion"
            app:layout_constraintBaseline_toBaselineOf="@+id/descripcion_corta"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/settings" />

        <EditText
            android:id="@+id/descripcion_corta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="59dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="@string/camera_settings" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="24dp"
            android:text="Ciudad"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto"
            tools:text="@string/singapore" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="369dp"
            android:layout_height="54dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Descripcion Larga"
            app:layout_constraintBottom_toTopOf="@+id/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_corta"
            app:layout_constraintVertical_bias="0.26999998"
            tools:text="@string/singapore_description" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="63dp"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>